laborations/lab1/test/bad/bad083.cc
int main () {
	typedef (45*std::cout) apa;
}
